Beginning dbpedia tutorial

--- a/bank-tutorial/taking_terminus_to_the_bank.ipynb
+++ b/bank-tutorial/taking_terminus_to_the_bank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +11,7 @@
     "from terminusdb_client import WOQLQuery as WQ\n",
     "from terminusdb_client import WOQLClient\n",
     "\n",
-    "server_url = \"https://127.0.0.1:6360\"\n",
+    "server_url = \"https://127.0.0.1:6363\"\n",
     "user = \"admin\"\n",
     "account = \"admin\"\n",
     "key = \"root\"\n",
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment this to delete your old database first\n",
-    "client.delete_database(dbid)"
+    "# client.delete_database(dbid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Witness of failure for mike: [{'@type': 'vio:ViolationWithDatatypeObject', 'vio:base_type': {'@type': 'xsd:string', '@value': 'xsd:nonNegativeInteger'}, 'vio:literal': {'@type': 'xsd:anySimpleType', '@value': -7}, 'vio:message': 'Not a well formed xsd:nonNegativeInteger', 'vio:property': {'@type': 'xsd:anyURI', '@value': 'terminusdb:///schema#balance'}}]\n"
+     ]
+    }
+   ],
    "source": [
     "# try to make mike go below zero\n",
     "account_id, balance, new_balance = WQ().vars(\"AccountID\", \"Balance\", \"New Balance\")\n",
@@ -120,9 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "APIError",
+     "evalue": "[\n  {\n    \"@type\":\"vio:ViolationWithDatatypeObject\",\n    \"vio:base_type\": {\"@type\":\"xsd:string\", \"@value\":\"xsd:nonNegativeInteger\"},\n    \"vio:literal\": {\"@type\":\"xsd:anySimpleType\", \"@value\":-97},\n    \"vio:message\":\"Not a well formed xsd:nonNegativeInteger\",\n    \"vio:property\": {\"@type\":\"xsd:anyURI\", \"@value\":\"terminusdb:///schema#balance\"}\n  }\n]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAPIError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-7b5f47a50399>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Subtract less\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m query = WQ().woql_and(\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mWQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtriple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scm:owner\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Mike\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mWQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtriple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scm:balance\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbalance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mWQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_triple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scm:balance\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbalance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlquery/woql_query.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, client, commit_msg, file_dict)\u001b[0m\n\u001b[1;32m    425\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    426\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 427\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcommit_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    429\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mto_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlclient/woqlClient.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self, woql_query, commit_msg, file_dict)\u001b[0m\n\u001b[1;32m    719\u001b[0m             \u001b[0mpayload\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mquery_obj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    720\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 721\u001b[0;31m         return self.dispatch(\n\u001b[0m\u001b[1;32m    722\u001b[0m             \u001b[0mAPIEndpointConst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWOQL_QUERY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconConfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery_url\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest_file_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    723\u001b[0m         )\n",
+      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlclient/woqlClient.py\u001b[0m in \u001b[0;36mdispatch\u001b[0;34m(self, action, url, payload, file_dict)\u001b[0m\n\u001b[1;32m   1042\u001b[0m         \u001b[0;31m# self.conCapabilities.capabilitiesPermit(action)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1043\u001b[0m         \u001b[0;31m# url, action, payload={}, basic_auth, jwt=None, file_dict=None)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1044\u001b[0;31m         return DispatchRequest.send_request_by_action(\n\u001b[0m\u001b[1;32m   1045\u001b[0m             \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1046\u001b[0m             \u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlclient/dispatchRequest.py\u001b[0m in \u001b[0;36msend_request_by_action\u001b[0;34m(cls, url, action, payload, basic_auth, remote_auth, file_dict, insecure)\u001b[0m\n\u001b[1;32m    179\u001b[0m                     \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequest_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 181\u001b[0;31m                 raise (\n\u001b[0m\u001b[1;32m    182\u001b[0m                     APIError(\n\u001b[1;32m    183\u001b[0m                         \u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAPIError\u001b[0m: [\n  {\n    \"@type\":\"vio:ViolationWithDatatypeObject\",\n    \"vio:base_type\": {\"@type\":\"xsd:string\", \"@value\":\"xsd:nonNegativeInteger\"},\n    \"vio:literal\": {\"@type\":\"xsd:anySimpleType\", \"@value\":-97},\n    \"vio:message\":\"Not a well formed xsd:nonNegativeInteger\",\n    \"vio:property\": {\"@type\":\"xsd:anyURI\", \"@value\":\"terminusdb:///schema#balance\"}\n  }\n]"
+     ]
+    }
+   ],
    "source": [
     "# Subtract less\n",
     "query = WQ().woql_and(\n",
@@ -136,9 +160,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'@type': 'api:WoqlResponse',\n",
+       " 'api:status': 'api:success',\n",
+       " 'api:variable_names': ['AccountID', 'Balance'],\n",
+       " 'bindings': [{'AccountID': 'terminusdb:///data/001234',\n",
+       "   'Balance': {'@type': 'http://www.w3.org/2001/XMLSchema#decimal',\n",
+       "    '@value': 13}}],\n",
+       " 'deletes': 0,\n",
+       " 'inserts': 0,\n",
+       " 'transaction_retry_count': 0}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Mike only has 13 money\n",
     "(WQ().triple(account_id, \"scm:owner\", \"Mike\") \n",
@@ -213,7 +256,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q = WQ().limit(10).triple(\"v:X\",\"v:Y\",\"v:Z\")\n",
+    "client.query(q)"
+   ]
   }
  ],
  "metadata": {
@@ -232,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
