commented the delete db in bike tutorial

--- a/bike-tutorial/python/Create TerminusDB Graph with Python Client.ipynb
+++ b/bike-tutorial/python/Create TerminusDB Graph with Python Client.ipynb
@@ -49,7 +49,7 @@
    ],
    "source": [
     "# Uncomment this to delete your old database first\n",
-    "client.delete_database(dbid)"
+    "# client.delete_database(dbid)"
    ]
   },
   {
