remove workspace from url (appears to work)

--- a/START.ipynb
+++ b/START.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# terminusdb Binder Notebook Examples"
+    "# terminusdb Binder Notebook Examples\n",
+    "\n",
+    "> _this is intended to be run from inside a running notebook server on [Binder](https://mybinder.org):_\n",
+    ">\n",
+    "> [![Binder][binder-badge]][binder]\n",
+    "\n",
+    "[binder-badge]: https://mybinder.org/badge_logo.svg\n",
+    "[binder]: https://mybinder.org/v2/gh/bollwyvl/terminusdb-tutorials/add-binder?urlpath=lab"
    ]
   },
   {
@@ -14,14 +21,26 @@
     "## Start terminusdb **DO THIS FIRST**\n",
     "\n",
     "- Open a JupyterLab _Terminal_ (there should be one open for you)\n",
-    "- Run `start_binder_terminusdb.sh`"
+    "- Run `./start_binder_terminusdb.sh`\n",
+    "\n",
+    "> You should see something like:\n",
+    "> ```bash\n",
+    "terminusdb-server started at Monday, Oct 19, 20:55:50 UTC (utime 1603140950.2060583) args []\n",
+    "% Started server at http://localhost:6363/\n",
+    "% Welcome to TerminusDB's terminusdb-server!\n",
+    "% You can view your server in a browser at 'http://127.0.0.1:6363'\n",
+    "> ```\n",
+    "\n",
+    "- Requests will show up here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Open an Example"
+    "## Open an Example\n",
+    "\n",
+    "> Make sure the host/port line up when connecting to your server!"
    ]
   },
   {
