--- a/bank-tutorial/taking_terminus_to_the_bank.ipynb
+++ b/bank-tutorial/taking_terminus_to_the_bank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -21,7 +21,7 @@
     "description = \"An example database for playing with bank accounts\"\n",
     "\n",
     "client = WOQLClient(server_url)\n",
-    "result = client.connect(user=user,account=account,key=key,db=dbid)"
+    "result = client.connect(user=user,account=\"admin\",key=key,db=dbid)"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
